# ABM

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  NOTICE.md  PHASE9_HANDOFF.md  README.md  adr_001_implementation_spec.md  adr_001_network_primary_engine.md  methods.md  phase2_spec.md  phase4_spec.md  phase5_spec.md  phase6_spec.md  phase7_spec.md  phase8_partypull_spec.md  phase8b_historical_replication_spec.md  phase8b_results.md  phase8c_spec.md  phase8d_historical_results.md  phase8e_results.md  phase8f_investigation_report.md  phase8f_metrics_audit.md  phase8f_spec.md  phase9_empirical_targets.md  phase9_results.md  phase9_section11_under_tier_a.json  phase9_spec.md  phase9_tier_a_sweep.csv  phase9_tier_a_sweep.json  phase9_tier_a_sweep_winner.json  phase9_tier_a_vs_baseline.csv  phase9_tier_c_blessed_descriptors.csv  phase9_tier_c_sweep.csv  phase9_tier_c_sweep_winner.json  phase9_tier_c_vs_baseline.csv  pillar_engine_roadmap.md  pillar_s0_vs_s1.html  pillar_spec.md  pyproject.toml  (+4 more)
.claude/: launch.json  settings.local.json
.design_bundle/: bundle.tar
.design_bundle_v2/: bundle.tar
abm/: __init__.py  calibration.py  calibration_parallel.py  calibration_phase9.py
docs/: BACKLOG.md  ENGINE_KNOBS.md  ENGINE_OVERVIEW.md  INTERVENTIONS_OVERVIEW.md  affect_bands_investigation.md  affect_viz_data_and_recalibration.md  agent_execution_prompt.md  demo_jumpiness.md  execution_roadmap.md  intervention_knob_audit.md  literature.md  methods.md  model_blindspot_research_summary.md  model_blindspots.md  polarization_causal_model.md  web_data_contract.md  web_demo_audit.md  (+1 more)
(+3752 files in other folders)
